Fix mobile click handlers not working on iPhones

--- a/theme/rdnshiny/css/mp-screen.css
+++ b/theme/rdnshiny/css/mp-screen.css
@@ -398,6 +398,16 @@ color: #DDD;
 text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
 margin: 0;
 white-space: nowrap;
+position: relative;
+}
+
+.entity_actions h2 a {
+position: absolute;
+left: 0;
+right: 0;
+top: 0;
+bottom: 0;
+opacity: 0;
 }
 
 .entity_actions h2:before {
